Added Configuration Webpage

--- a/data/web/index.html
+++ b/data/web/index.html
@@ -19,6 +19,7 @@
                 <li class="nav-item active">
                     <a class="nav-link hover" href="index.html">Home</a>
                 </li>
+                <a class="nav-link hover" href="config.html">Configuration</a>
             </ul>
         </div>
     </nav>
