Fixed POST Argument Name

--- a/data/web/config.html
+++ b/data/web/config.html
@@ -23,7 +23,7 @@
         <form action="" method="post">
             <p><input type="text" placeholder="SSID" required name="STA_SSID">
             </p>
-            <p><input type="password" placeholder="Password" name="STA_Password">
+            <p><input type="password" placeholder="Password" name="STA_PASSWORD">
             </p>
             <p><button type="submit">Save and Restart</button></p>
         </form>
