--- a/data/web/config.html
+++ b/data/web/config.html
@@ -1,7 +1,3 @@
-<!--
-  (c) NewTec GmbH 2020   -   www.newtec.de
-  $URL: https://github.com/NewTec-GmbH/esp32-can-iot $
--->
 <!DOCTYPE html>
 <html>
 
@@ -16,8 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#">Racing Lap Timer</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation" />
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation" />
         <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -45,7 +40,8 @@
         </form>
     </div>
 
-    </main><!-- /.container -->
+    </main>
+    <!-- /.container -->
 </body>
 
 </html>
