Fixed nullptr assignment

--- a/data/web/index.html
+++ b/data/web/index.html
@@ -164,6 +164,7 @@
         }
 
         function onEvent(rsp) {
+            var timeMinSecMSec = null
 
             if ("STARTED" == rsp.event) {
 
