--- a/data/web/config.html
+++ b/data/web/config.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <title>Credential Configuration</title>
     <link rel="stylesheet" href="./bootstrap/4.0.0/css/bootstrap.min.css" />
-    <link href="starter-template.css" rel="stylesheet">
+    <link href="starter-template.css" rel="stylesheet" />
 </head>
 
 <body>
