#7 Renamed "Configuration" into "Settings"

--- a/data/web/index.html
+++ b/data/web/index.html
@@ -22,7 +22,7 @@
                     <a class="nav-link hover" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link hover" href="config.html">Configuration</a>
+                    <a class="nav-link hover" href="config.html">Settings</a>
                 </li>
             </ul>
         </div>
