--- a/data/web/config.html
+++ b/data/web/config.html
@@ -12,7 +12,8 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#">Racing Lap Timer</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation" />
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation" />
         <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -29,20 +30,87 @@
     </nav>
 
     <main role="main" class="container">
-        <h1 class="row justify-content-center">Change Station Credentials</h1>
-
-        <div class="row justify-content-center">
-            <form action="" method="post">
-                <p><input type="text" placeholder="SSID" required name="STA_SSID" />
-                </p>
-                <p><input type="password" placeholder="Password" name="STA_PASSWORD" />
-                </p>
-                <p><button type="submit" class="btn btn-secondary">Save and Restart</button></p>
-            </form>
+        <div class="row row-cols-2">
+            <div class="col">
+                <h1>Edit Groups</h1>
+                <div class="mb-3">
+                    <label for="NumberOfGroups" class="form-label">Number Of Groups: </label>
+                    <input type="number" class="form-range" min="0" max="10" id="NumberOfGroups">
+                    <p><button type="submit" class="btn btn-secondary">Save</button></p>
+                </div>
+            </div>
+            <div class="col">
+                <h1>Change Station Credentials</h1>
+                <form action="" method="post">
+                    <p><input class="form-control" type="text" placeholder="SSID" required name="STA_SSID" />
+                    </p>
+                    <p><input class="form-control" type="password" placeholder="Password" name="STA_PASSWORD" />
+                    </p>
+                    <p><button type="submit" class="btn btn-secondary">Save and Restart</button></p>
+                </form>
+            </div>
         </div>
-
     </main>
     <!-- /.container -->
+
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="./jquery/jquery-3.5.1.slim.min.js"></script>
+    <script src="./popper/2.4.4/popper.min.js"></script>
+    <script src="./bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="./ws.js"></script>
+    <script>
+        var global = {
+            wsClient: new cpjs.ws.Client(),
+            numberOfGroups: null,
+        };
+
+        function onClosed() {
+            console.info("Closed.");
+            alert("Websocket connection closed.");
+        }
+
+        function onEvent(rsp) {
+            var timeMinSecMSec = null
+
+            if ("GROUPS" == rsp.event) {
+                global.numberOfGroups = rsp.groups;
+                document.getElementById("NumberOfGroups").value = global.numberOfGroups;
+                console.log(global.numberOfGroups + " Groups are configured.");
+            } else {
+                alert("Unknown event received: " + rsp.event);
+            }
+        }
+
+        function getGroups() {
+            global.wsClient.getGroups().then(function (rsp) {
+                console.info("Retrieved Groups.");
+            }).catch(function (err) {
+                if ("undefined" !== typeof err) {
+                    console.error(err);
+                }
+            });
+        }
+
+        $(document).ready(function () {
+            global.wsClient.connect({
+                protocol: "ws",
+                hostname: location.hostname,
+                port: 81,
+                endpoint: "/",
+                onEvent: onEvent,
+                onClosed: onClosed,
+            }).then(function (rsp) {
+                console.info("Connected.");
+                getGroups();
+            }).catch(function (err) {
+                if ("undefined" !== typeof err) {
+                    console.error(err);
+                }
+
+                alert("Websocket connection failed.");
+            });
+        });
+    </script>
 </body>
 
 </html>
