Renamed "GET_GROUPS" WS Command

--- a/data/web/config.html
+++ b/data/web/config.html
@@ -36,7 +36,7 @@
                 <div class="mb-3">
                     <label for="NumberOfGroups" class="form-label">Number Of Groups: </label>
                     <input type="number" class="form-range" min="0" max="10" id="NumberOfGroups">
-                    <p><button type="submit" class="btn btn-secondary">Save</button></p>
+                    <p><button type="submit" class="btn btn-secondary" onclick="saveGroups()">Save</button></p>
                 </div>
             </div>
             <div class="col">
