Set 10 as the maximum number of groups

--- a/data/web/config.html
+++ b/data/web/config.html
@@ -96,6 +96,7 @@
                 if ("undefined" !== typeof err) {
                     console.error(err);
                 }
+                document.getElementById("buttonSaveGroups").disabled = false;
             });
         }
 
