#8 Client notifies Target which group is released

--- a/data/web/index.html
+++ b/data/web/index.html
@@ -137,7 +137,7 @@
         function releaseMeasurement() {
             clearTimer();
 
-            global.wsClient.release().then(function(rsp) {
+            global.wsClient.release(global.selectedGroup).then(function(rsp) {
                 console.info("Released.");
             }).catch(function(err) {
                 if ("undefined" !== typeof err) {
