--- a/data/web/index.html
+++ b/data/web/index.html
@@ -31,7 +31,7 @@
     <main role="main" class="container">
 
         <div class="row justify-content-center">
-            <div id="goupSelectionBar" class="btn-toolbar" role="group" aria-label="Choose group">
+            <div id="groupSelectionBar" class="btn-toolbar" role="group" aria-label="Choose group">
             </div>
         </div>
 
@@ -136,7 +136,6 @@
 
         function releaseMeasurement() {
             clearTimer();
-
             global.wsClient.release(global.selectedGroup).then(function(rsp) {
                 console.info("Released.");
             }).catch(function(err) {
@@ -183,6 +182,7 @@
                 global.milliseconds     = timeMinSecMSec.milliseconds;
                 updateTimer();
 
+                global.selectedGroup = rsp.activeGroup;
                 if ((0 == global.resultTable[global.selectedGroup].duration) ||
                     (rsp.duration < global.resultTable[global.selectedGroup].duration)) {
 
@@ -200,7 +200,7 @@
             var index = 0;
 
             for (index = 0; index < global.numberOfGroups; ++index) {
-                $("#goupSelectionBar").append("<button type=\"button\" class=\"btn btn-primary mx-2\" onclick=\"selectGroup(" + index + ")\">Group " + String.fromCharCode(65 + index) + "</button>");
+                $("#groupSelectionBar").append("<button type=\"button\" class=\"btn btn-primary mx-2\" onclick=\"selectGroup(" + index + ")\">Group " + String.fromCharCode(65 + index) + "</button>");
             }
         }
 
@@ -284,6 +284,7 @@
         function getSavedTable(){
             global.wsClient.getTable().then(function (rsp) {
                 console.info("Table Updated");
+                selectGroup(0);
             }).catch(function (err) {
                 if ("undefined" !== typeof err) {
                     console.error(err);
