#9 Added missing Slash

--- a/data/web/settings.html
+++ b/data/web/settings.html
@@ -35,7 +35,7 @@
                 <h1>Edit Groups</h1>
                 <div class="mb-3">
                     <label for="NumberOfGroups" class="form-label">Number Of Groups: </label>
-                    <input type="number" class="form-range" min="0" max="10" id="NumberOfGroups">
+                    <input type="number" class="form-range" min="0" max="10" id="NumberOfGroups" />
                     <p><button id="buttonSaveGroups" type="submit" class="btn btn-secondary" onclick="saveGroups()">Save</button></p>
                 </div>
             </div>
