--- a/data/web/settings.html
+++ b/data/web/settings.html
@@ -89,7 +89,7 @@
         function setGroups() {
             document.getElementById("buttonSaveGroups").disabled = true;
             global.numberOfGroups = document.getElementById("NumberOfGroups").value
-            global.wsClient.saveGroups(global.numberOfGroups).then(function (rsp) {
+            global.wsClient.setGroups(global.numberOfGroups).then(function (rsp) {
                 alert("Groups have been saved!");
                 document.getElementById("buttonSaveGroups").disabled = false;
             }).catch(function (err) {
