--- a/data/web/settings.html
+++ b/data/web/settings.html
@@ -23,7 +23,7 @@
                     <a class="nav-link hover" href="index.html">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link hover" href="config.html">Settings</a>
+                    <a class="nav-link hover" href="settings.html">Settings</a>
                 </li>
             </ul>
         </div>
