--- a/data/web/index.html
+++ b/data/web/index.html
@@ -22,6 +22,9 @@
                     <a class="nav-link hover" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link hover" href="groupConfig.html">Group Configuration</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link hover" href="settings.html">Settings</a>
                 </li>
             </ul>
